adding codes for base file

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,7 +9,7 @@
     <title> Welcome to the best News Highlight Review website </title>
     {% endif %}
 </head>
-
+{% extends 'base.html'%}
 <body>
     <!-- general news section  -->
     <h3> General news</h3>
