--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,19 +1,6 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        {% if title %}
-        <title> {{ title }}</title>
-        {% else %}
-        <title> Welcome to the best Movie Review website </title>
-        {% endif %}
-    </head>
-    <body>
-        <!-- Content block -->
-        {% extends 'bootstrap/base.html'%}
-        
-        {% block content %}
+{% extends 'bootstrap/base.html'%}
 
-        {% endblock%}
-    </body>
-</html>
+<!-- Navbar block  --> 
+{% block navbar %}
+    {% include 'navbar.html' %}
+{% endblock %}
