--- a/app/templates/articles.html
+++ b/app/templates/articles.html
@@ -8,7 +8,8 @@
        <!-- <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 movie-details"> -->
            <h3>{{ article.title }}</h3>
            <p class="overview"> {{article.description}}</p>
-           <p><img src="{{article.urlToImage}}"></p>
+           <a href="{{article.url}}">Read More...</a>
+           <img src="{{article.image}}" alt="" class="img-responsive" styles="height:30px">
        {%endfor%}
        </div>
 </div>
