--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,6 @@
 {% extends 'base.html'%}
 {% block content %}
 
-
 <head>
     <meta charset="utf-8">
     {% if title %}
@@ -12,18 +11,21 @@
 </head>
 
 <body>
+    <div class="container"></div>
     <!-- general news section  -->
-    <h3> General news</h3>
+    <div class="row">
+        <div class="col-md-12">
+    <h3 style="text-align: center"> General news</h3>
     <ul>
         {% for general_news in general %}
-        <li><h2>{{ general_news.name}}</h2></li>
-        <li>{{ general_news.id}}</li>
-        <li>{{ general_news.description}}</li>
-        <li><a href="{{ general_news.url}}">url</a></li>
-        <li>{{ general_news.category}}</li>
-        <li>{{ general_news.language}}</li>
-        <li>{{ general_news.country}}</li>
-        <li><a href="/articles/{{general_news.id}}">Read More</a></li>
+        <li><h2>Name:{{ general_news.name}}</h2></li>
+        <li>Id:{{ general_news.id}}</li>
+        <li>Description:{{ general_news.description}}</li>
+        <!-- <li><a href="{{ general_news.url}}">url</a></li> -->
+        <li>Category:{{ general_news.category}}</li>
+        <li>Language:{{ general_news.language}}</li>
+        <li>Country:{{ general_news.country}}</li>
+        <li><a href="/articles/{{general_news.id}}">View Articles</a></li>
         {% endfor %}
     </ul>
     <!-- business news -->
@@ -55,8 +57,8 @@
         <li>{{ technology_news.name}}</li>
         {% endfor %}
     </ul> -->
-
-
+</div>
+</div>
     
 </body>
 {%endblock%}
